--- a/Frontend/src/assets/main.css
+++ b/Frontend/src/assets/main.css
@@ -1,4 +1,5 @@
 @import './base.css';
 @import 'bootstrap';
-@import "bootstrap-icons/font/bootstrap-icons.css";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
 
