--- a/Frontend/src/views/HomeView/HomeView.scss
+++ b/Frontend/src/views/HomeView/HomeView.scss
@@ -1,3 +1,7 @@
+.home-wrapper {
+  margin: 40px;
+}
+
 .card {
   position: relative;
   overflow: hidden;
@@ -31,6 +35,10 @@
   text-decoration: none;
   color: inherit;
   font-size: 18px;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .card-body {
