--- a/Frontend/src/views/Auth/Login/Login.scss
+++ b/Frontend/src/views/Auth/Login/Login.scss
@@ -10,13 +10,13 @@
 .card {
   display: flex;
   justify-content: center;
-  width: 380px;
-  margin: 0 auto;
+  width: 360px;
+  align-self: center;
 }
 
-.input {
-  width: 100%;
-  height: 30px;
+.form-control:focus {
+  box-shadow: none;
+  border-color: #b3b3b3;
 }
 
 .loginbtn {
@@ -30,4 +30,10 @@
   display: flex;
   justify-content: center;
   margin-top: 20px;
+}
+
+@media screen and (max-width: 375px){
+  .card {
+    width: 300px;
+  }
 }
