--- a/Frontend/src/views/Brands/Brands.scss
+++ b/Frontend/src/views/Brands/Brands.scss
@@ -29,3 +29,13 @@
   max-width: 100%;
   max-height: 100%;
 }
+
+.row {
+ margin: 0;
+}
+
+@media screen and (max-width: 991px) {
+  .row {
+   justify-content: center;
+  }
+}
