--- a/Frontend/src/views/HomeView/HomeView.scss
+++ b/Frontend/src/views/HomeView/HomeView.scss
@@ -1,29 +1,40 @@
-.home-wrapper {
-  margin: 40px;
+.container {
+  display: flex;
+  justify-content: center;
+  justify-self: center;
+  max-width: auto !important;
+
+  padding: 0;
+}
+
+.newProducts {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px;
 }
 
 .card {
-  position: relative;
   overflow: hidden;
-  transition: transform 0.3s;
-  width: 280px;
+  width: 220px;
   height: 340px;
-  justify-content: flex-end;
   border: 1px solid #ccc;
 
-  &:hover {
-    transform: scale(1.1);
+  .img-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 160px;
+    margin: 5px;
+  }
+
+  .card-body {
+    padding-top: 0;
   }
 }
 
 .img {
-  max-width: 280px;
-  max-height: 200px;
-}
-
-.text {
-  display: flex;
-  justify-content: space-between;;
+  max-width: 215px;
+  max-height: 160px;
 }
 
 .card-link {
@@ -41,20 +52,58 @@
   }
 }
 
-.card-body {
-  position: relative;
-}
-
 .button-container {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   text-align: center;
-  opacity: 0;
-  transition: opacity 0.3s ease;
+  opacity: 1;
+  z-index: 100;
 }
 
-.card:hover .button-container {
-  opacity: 1;
+.badge {
+  color: #000;
+  background-color: #f3f3f3;
+  border: none;
+  border-width: 1px;
+  text-decoration: none;
+}
+
+
+@media screen and (max-width: 425px) {
+  .newProducts {
+    margin: 5px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .row {
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .card:hover .button-container {
+    opacity: 1;
+  }
+
+  .card {
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+}
+
+@media screen and (min-width: 1020px) {
+  .newProducts {
+    margin: 30px 100px 30px 100px;
+  }
+
+  .carousel {
+    max-width: 80%;
+    justify-content: center;
+  }
 }
